trunk/Archive2/19/3dac1a21b05e0f/main.cpp
#include “testAppendages”
//Naill Test
Int main()
{
    If ( IsHandsWorking () && IsLegsWorking && IsEyesWorking() )
    {
         Cout <<  “Pour it the ***fuck*** YOURSELF!!!!”  << endl;
    }
}
